--- a/style.css
+++ b/style.css
@@ -60,11 +60,16 @@ input[type="search"].dark::-webkit-search-cancel-button {
 	height: 100px;
 }
 
+.nameInfo {
+	display: grid;
+}
+
 .item p {
 	position: relative;
+	display: block;
 	top: 20%;
 	transform: translateY(160%);
-	margin-left: 5%;
+	margin-left: 1%;
 }
 
 .card {
@@ -86,7 +91,7 @@ input[type="search"].dark::-webkit-search-cancel-button {
 }
 
 .hidden {
-	display: none;
+	display: none !important;
 }
 
 .songDetails {
@@ -148,7 +153,7 @@ input[type="search"].dark::-webkit-search-cancel-button {
 
 .songAnalysis h4 {
 	margin-bottom: 1.5vh;
-	font-size: 1vw;
+	font-size: 1.2vw;
 	text-decoration: underline;
 }
 
@@ -156,5 +161,5 @@ input[type="search"].dark::-webkit-search-cancel-button {
 	margin-top: 1vh;
 	padding-right: 3vw;
 	font-weight: 400;
-	font-size: 0.8vw;
+	font-size: 1vw;
 }
