--- a/style.css
+++ b/style.css
@@ -28,12 +28,14 @@ input[type="search"].dark::-webkit-search-cancel-button {
 	padding: 5vh;
 }
 
-.topBar h1 {
-	font-size: 2vw;
+.topBar a {
+	font-size: 1.5vw;
+	color: black;
+	text-decoration: none;
 }
 
 .topBar input {
-	margin-top: 3vh;
+	margin-top: 5vh;
 	width: 100%;
 	font-size: 2vw;
 	padding-bottom: 1vh;
@@ -86,6 +88,7 @@ input[type="search"].dark::-webkit-search-cancel-button {
 .arrow-continue {
 	position: relative;
 	font-size: 1vw;
+	margin-top: 1vh;
 	margin-right: 2%;
 	float: right;
 }
