--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@
 	margin: 0;
 	padding: 0;
 	font-family: 'Montserrat', sans-serif;
+	-webkit-appearance: none;
 }
 
 input[type="search"]::-webkit-search-cancel-button {
