--- a/style.css
+++ b/style.css
@@ -189,7 +189,8 @@ input[type="search"].dark::-webkit-search-cancel-button {
 }
 
 .songInfo h3 {
-	display: inline-block;
+	display: table-caption;
+	width: 70vw;
 	font-weight: 700;
 	margin-left: 3vw;
 	font-size: 2vw;
@@ -227,6 +228,7 @@ input[type="search"].dark::-webkit-search-cancel-button {
 	-ms-transform: translateY(-50%);
 	transform: translateY(-50%);
 	font-size: 1vw;
+	height: 50%;
 }
 
 .previewPlayer {
